# secp256k1-wallet-rs

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-09-23-081622-0000_create_wallets/: up.sql
migrations/2025-09-23-081629-0000_create_signatures/: down.sql  up.sql
migrations/2025-09-27-042629-0000_add_key_type_to_wallets/: up.sql
src/: cli.rs  db.rs  key_type.rs  main.rs  models.rs  schema.rs  sign.rs  signature.rs  wallet.rs
src/dao/: mod.rs  signature.rs  wallet.rs
src/db/: mod.rs  models.rs
tests/: integration.rs
