[package]
name = "wallet_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
secp256k1 = { version = "0.31.1", features = ["hashes", "rand"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.2"
anyhow = "1.0.100"

[dev-dependencies]
assert_cmd = "2.0"
diesel_migrations = "2.3.0"
