[package]
name = "wallet_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallet-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
secp256k1 = { version = "0.31.1", features = ["hashes", "rand"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.2"
anyhow = "1.0.100"
ed25519-dalek = "3.0.0-pre.1"
bs58 = "0.5.1"

[dev-dependencies]
assert_cmd = "2.0"
diesel_migrations = "2.3.0"
